# ngs

./: .gitignore  CMakeLists.txt
ngs-sdk/: CMakeLists.txt  Makefile.libs
ngs-sdk/adapter/: CMakeLists.txt
ngs-sdk/adapter/unix/fat86/: atomic32.h
ngs-sdk/dispatch/: CMakeLists.txt
ngs-sdk/language/: CMakeLists.txt
ngs-sdk/language/c++/: CMakeLists.txt
ngs-sdk/language/java/: CMakeLists.txt
ngs-sdk/language/python/: CMakeLists.txt
ngs-sdk/test/: CMakeLists.txt
ngs-sdk/test/test_engine/: CMakeLists.txt
